--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@
     z-index: 100;
   }
   .header{
-    background: url(img/valo.jpg) ;
+    background: url(img/itachi1.png) ;
     width: 100%;
     height: 100vh;
     background-size: cover;
     background-position: center;
     position: relative;
     overflow: hidden;
-    opacity: 0.9;
+    opacity: 5;
   }
   .navco{
     color: red;
